--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
         <h3>SoundTecITB</h3>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="#">Artistas</a></li>
                 <li><a href="#">Eventos</a></li>
                 <li><a href="#">Contacto</a></li>
@@ -257,7 +257,7 @@
     </main>
     <footer>
         <h3>SoundTecITB</h3>
-        <p>&copy;&nbsp;2025 SoundTecITB · <address>C/ Aiguablava, 123</address>&nbsp;·&nbsp;<address>Barcelona</address></p>
+        <p>&copy;&nbsp;2025 SoundTecITB ·&nbsp;<address>C/ Aiguablava, 123</address>&nbsp;·&nbsp;<address>Barcelona</address></p>
         <nav>
             <ol>
                 <li><a href="https://instagram.com/">Instagram</a></li>
