--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="./src/css/style.css">
 </head>
 <body>
     <header>
-        <h3>SoundTecITB</h3>
+        <h3>Sound<span>TecITB</span></h3>
         <nav>
             <ul>
                 <li><a href="/index.html">Home</a></li>
