--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h3>Sound<span>TecITB</span></h3>
+        <h3><a href="/index.html">Sound<span>TecITB</span></a></h3>
         <nav>
             <ul>
                 <li><a href="/index.html">Home</a></li>
