--- a/index.html
+++ b/index.html
@@ -15,228 +15,188 @@
                 <li><a href="#">Artistas</a></li>
                 <li><a href="#">Eventos</a></li>
                 <li><a href="#">Contacto</a></li>
-                <li><a href="#">Alta</a></li>
+                <li><a href="/register.html">Alta</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section>
-            <section>
+            <article>
                 <h1>Festival&nbsp;<span>Primavera Sound</span>&nbsp;· 3-7 Junio · Parc del Fòrum</h1>
                 <p>4 dias, 6 escenarios y mas de 120 artistas en el corazon de Barcelona.</p>
                 <p>Vive un show inmersivo con sonido 360º</p>
-                <section>
-                    <input type="button" value="Entradas">
-                    <input type="button" value="Descubrir Musica">
-                </section>
-                <section>
-                    <p>BCN</p>
-                    <p>Electrónica · Indie · Pop</p>
-                    <p>+18</p>
-                </section>
-            </section>
-            <aside><img src="./assets/img/portada/portada.png" alt="Festival SoundTecITB"></aside>
+                <a href="/tickets.html">Entradas</a>
+                <a href="/explore.html">Descubrir Musica</a>
+                <p>BCN</p>
+                <p>Electrónica · Indie · Pop</p>
+                <p>+18</p>
+            </article>
+            <img src="./assets/img/portada/portada.png" alt="Festival SoundTecITB">
         </section>
         <section>
             <header>
                 <h2>Lanzamientos</h2>
                 <input type="button" value="Ver todo">
             </header>
-            <section>
-                <section>
-                    <img src="./assets/img/lanzamientos/neon_skies.png" alt="Portada de Neon Skies">
-                    <h3>Neon Skies</h3>
-                    <section>
-                        <p>Atlas · Synthpop</p>
-                    </section>
-                    <input type="button" value="Más info">
-                </section>
-                <section>
-                    <img src="./assets/img/lanzamientos/hologram.png" alt="Portada de Hologram">
-                    <h3>Hologram</h3>
-                    <section>
-                        <p>Kaia Nova · Electropop</p>
-                    </section>
-                    <input type="button" value="Más info">
-                </section>
-                <section>
-                    <img src="./assets/img/lanzamientos/mar_de_sonidos.png" alt="Portada de Mar de Sonidos">
-                    <h3>Mar de Sonidos</h3>
-                    <section>
-                        <p>Marea Azul · Dream pop</p>
-                    </section>
-                    <input type="button" value="Más info">
-                </section>
-                <section>
-                    <img src="./assets/img/lanzamientos/altitude.png" alt="Portada de Altitude">
-                    <h3>Altitude</h3>
-                    <section>
-                        <p>Vértigo · Electronica</p>
-                    </section>
-                    <input type="button" value="Más info">
-                </section>
-                <section>
-                    <img src="./assets/img/lanzamientos/midnight_city.png" alt="Portada de Midnight City">
-                    <h3>Midnight City</h3>
-                    <section>
-                        <p>Neon Parade · SynthTecITB</p>
-                    </section>
-                    <input type="button" value="Más info">
-                </section>
-                <section>
-                    <img src="./assets/img/lanzamientos/echoes.png" alt="Portada de Echoes">
-                    <h3>Echoes</h3>
-                    <section>
-                        <p>Arpeggio · Ambient</p>
-                    </section>
-                    <input type="button" value="Más info">
-                </section>
-                <section>
-                    <img src="./assets/img/lanzamientos/stardust.png" alt="Portada de Stardust">
-                    <h3>Stardust</h3>
-                    <section>
-                        <p>Halo · Alt Pop</p>
-                    </section>
-                    <input type="button" value="Más info">
-                </section>
-                <section>
-                    <img src="./assets/img/lanzamientos/paper_tecitbs.png" alt="Portada de Paper TecITBs">
-                    <h3>Paper TecITBs</h3>
-                    <section>
-                        <p>Lykke · Indie</p>
-                    </section>
-                    <input type="button" value="Más info">
-                </section>
-                <section>
-                    <img src="./assets/img/lanzamientos/solaris.png" alt="Portada de Solaris">
-                    <h3>Solaris</h3>
-                    <section>
-                        <p>Dorian · Alt Rock</p>
-                    </section>
-                    <input type="button" value="Más info">
-                </section>
-                <section>
-                    <img src="./assets/img/lanzamientos/oblivion.png" alt="Portada de Oblivion">
-                    <h3>Oblivion</h3>
-                    <section>
-                        <p>M83 · Synth</p>
-                    </section>
-                    <input type="button" value="Más info">
-                </section>
-            </section>
+            <article>
+                <img src="./assets/img/lanzamientos/neon_skies.png" alt="Portada de Neon Skies">
+                <h3>Neon Skies</h3>
+                <p>Atlas · Synthpop</p>
+                <input type="button" value="Más info">
+            </article>
+            <article>
+                <img src="./assets/img/lanzamientos/hologram.png" alt="Portada de Hologram">
+                <h3>Hologram</h3>
+                <p>Kaia Nova · Electropop</p>
+                <input type="button" value="Más info">
+            </article>
+            <article>
+                <img src="./assets/img/lanzamientos/mar_de_sonidos.png" alt="Portada de Mar de Sonidos">
+                <h3>Mar de Sonidos</h3>
+                <p>Marea Azul · Dream pop</p>
+                <input type="button" value="Más info">
+            </article>
+            <article>
+                <img src="./assets/img/lanzamientos/altitude.png" alt="Portada de Altitude">
+                <h3>Altitude</h3>
+                <p>Vértigo · Electronica</p>
+                <input type="button" value="Más info">
+            </article>
+            <article>
+                <img src="./assets/img/lanzamientos/midnight_city.png" alt="Portada de Midnight City">
+                <h3>Midnight City</h3>
+                <p>Neon Parade · SynthTecITB</p>
+                <input type="button" value="Más info">
+            </article>
+            <article>
+                <img src="./assets/img/lanzamientos/echoes.png" alt="Portada de Echoes">
+                <h3>Echoes</h3>
+                <p>Arpeggio · Ambient</p>
+                <input type="button" value="Más info">
+            </article>
+            <article>
+                <img src="./assets/img/lanzamientos/stardust.png" alt="Portada de Stardust">
+                <h3>Stardust</h3>
+                <p>Halo · Alt Pop</p>
+                <input type="button" value="Más info">
+            </article>
+            <article>
+                <img src="./assets/img/lanzamientos/paper_tecitbs.png" alt="Portada de Paper TecITBs">
+                <h3>Paper TecITBs</h3>
+                <p>Lykke · Indie</p>
+                <input type="button" value="Más info">
+            </article>
+            <article>
+                <img src="./assets/img/lanzamientos/solaris.png" alt="Portada de Solaris">
+                <h3>Solaris</h3>
+                <p>Dorian · Alt Rock</p>
+                <input type="button" value="Más info">
+            </article>
+            <article>
+                <img src="./assets/img/lanzamientos/oblivion.png" alt="Portada de Oblivion">
+                <h3>Oblivion</h3>
+                <p>M83 · Synth</p>
+                <input type="button" value="Más info">
+            </article>
         </section>
         <section>
             <header>
                 <h2>Artistas destacados</h2>
-                <section>
-                    <input type="button" value="Var Ranking">
-                </section>
+                <a href="/ranking.html">Var Ranking</a>
             </header>
-            <section>
-                <section>
-                    <img src="./assets/img/artistas/kala_nova.png" alt="Artista Kala Nova">
-                    <h3>Kala Nova</h3>
-                    <p>Electropop</p>
-                    <span>★★★★☆</span>
-                </section>
-                <section>
-                    <img src="./assets/img/artistas/atlas.png" alt="Artista Atlas">
-                    <h3>Atlas</h3>
-                    <p>Synthpop</p>
-                    <span>★★★★☆</span>
-                </section>
-                <section>
-                    <img src="./assets/img/artistas/vértigo.png" alt="Artista Vértigo">
-                    <h3>Vértigo</h3>
-                    <p>Electrónica</p>
-                    <span>★★★★★</span>
-                </section>
-                <section>
-                    <img src="./assets/img/artistas/lykke.png" alt="Artista Lykke">
-                    <h3>Lykke</h3>
-                    <p>Indie</p>
-                    <span>★★★★☆</span>
-                </section>
-                <section>
-                    <img src="./assets/img/artistas/neon_parade.png" alt="Artista Neon Parade">
-                    <h3>Neon Parade</h3>
-                    <p>SynthTecITB</p>
-                    <span>★★★★☆</span>
-                </section>
-                <section>
-                    <img src="./assets/img/artistas/halo.png" alt="Artista Halo">
-                    <h3>Halo</h3>
-                    <p>Alt Pop</p>
-                    <span>★★★★☆</span>
-                </section>
-                <section>
-                    <img src="./assets/img/artistas/marea_azul.png" alt="Artista Marea Azul">
-                    <h3>Marea Azul</h3>
-                    <p>Dream pop</p>
-                    <span>★★★★☆</span>
-                </section>
-                <section>
-                    <img src="./assets/img/artistas/arpeggio.png" alt="Artista Arpeggio">
-                    <h3>Arpeggio</h3>
-                    <p>Ambient</p>
-                    <span>★★★★☆</span>
-                </section>
-            </section>
+            <article>
+                <img src="./assets/img/artistas/kala_nova.png" alt="Artista Kala Nova">
+                <h3>Kala Nova</h3>
+                <p>Electropop</p>
+                <span>★★★★☆</span>
+            </article>
+            <article>
+                <img src="./assets/img/artistas/atlas.png" alt="Artista Atlas">
+                <h3>Atlas</h3>
+                <p>Synthpop</p>
+                <span>★★★★☆</span>
+            </article>
+            <article>
+                <img src="./assets/img/artistas/vértigo.png" alt="Artista Vértigo">
+                <h3>Vértigo</h3>
+                <p>Electrónica</p>
+                <span>★★★★★</span>
+            </article>
+            <article>
+                <img src="./assets/img/artistas/lykke.png" alt="Artista Lykke">
+                <h3>Lykke</h3>
+                <p>Indie</p>
+                <span>★★★★☆</span>
+            </article>
+            <article>
+                <img src="./assets/img/artistas/neon_parade.png" alt="Artista Neon Parade">
+                <h3>Neon Parade</h3>
+                <p>SynthTecITB</p>
+                <span>★★★★☆</span>
+            </article>
+            <article>
+                <img src="./assets/img/artistas/halo.png" alt="Artista Halo">
+                <h3>Halo</h3>
+                <p>Alt Pop</p>
+                <span>★★★★☆</span>
+            </article>
+            <article>
+                <img src="./assets/img/artistas/marea_azul.png" alt="Artista Marea Azul">
+                <h3>Marea Azul</h3>
+                <p>Dream pop</p>
+                <span>★★★★☆</span>
+            </article>
+            <article>
+                <img src="./assets/img/artistas/arpeggio.png" alt="Artista Arpeggio">
+                <h3>Arpeggio</h3>
+                <p>Ambient</p>
+                <span>★★★★☆</span>
+            </article>
         </section>
         <section>
             <header>
                 <h2>Festivales</h2>
-                <section>
-                    <input type="button" value="Barcelona">
-                </section>
+                <p>Barcelona</p>
             </header>
-            <section>
-                <article>
-                    <img src="./assets/img/festivales/primavera_sound.png" alt="Festival de Primavera Sound">
-                    <h3>Primavera Sound</h3>
-                    <p>Barcelona · Finales de mayo/primera semana de junio · Headlines: varios</p>
-                    <section>
-                        <span>Indle</span>
-                        <span>Electónica</span>
-                        <span>Pop</span>
-                    </section>
-                </article>
-                <article>
-                    <img src="./assets/img/festivales/aurora_fest.png" alt="Festival de Aurora Fest">
-                    <h3>Aurora Fest</h3>
-                    <p>Montjuïc · 12-14 Jul · Headlines: Atlas, Kaia Nova</p>
-                    <section>
-                        <span>Escenografía</span>
-                        <span>Sostenible</span>
-                        <span>Experiencial</span>
-                    </section>
-                </article>
-                <article>
-                    <img src="./assets/img/festivales/altitude.png" alt="Festival de Altitude">
-                    <h3>Altitude</h3>
-                    <p>Andorra · 20-22 Feb · Headlines: M83, Halo</p>
-                    <section>
-                        <span>Major DJ</span>
-                        <span>Tecnología</span>
-                        <span>Aftermovie</span>
-                    </section>
-                </article>
-            </section>
-            <aside>
-                <article>
-                    <img src="./assets/img/festivales/spotify.png" alt="Spotify">
-                    <h3>Escúchalo en Spotify</h3>
-                    <p>Playlist «SoundWave Hits»</p>
-                    <input type="button" value="Abrir App">
-                </article>
-                <article>
-                    <img src="./assets/img/festivales/radio.png" alt="Radio Indie BCN">
-                    <h3>Radio Indie BCN</h3>
-                    <p>Emisión en directo · 24/7</p>
-                    <input type="button" value="Escuchar">
-                </article>
-            </aside>
+            <article>
+                <img src="./assets/img/festivales/primavera_sound.png" alt="Festival de Primavera Sound">
+                <h3>Primavera Sound</h3>
+                <p>Barcelona · Finales de mayo/primera semana de junio · Headlines: varios</p>
+                <span>Indle</span>
+                <span>Electónica</span>
+                <span>Pop</span>
+            </article>
+            <article>
+                <img src="./assets/img/festivales/aurora_fest.png" alt="Festival de Aurora Fest">
+                <h3>Aurora Fest</h3>
+                <p>Montjuïc · 12-14 Jul · Headlines: Atlas, Kaia Nova</p>
+                <span>Escenografía</span>
+                <span>Sostenible</span>
+                <span>Experiencial</span>
+            </article>
+            <article>
+                <img src="./assets/img/festivales/altitude.png" alt="Festival de Altitude">
+                <h3>Altitude</h3>
+                <p>Andorra · 20-22 Feb · Headlines: M83, Halo</p>
+                <span>Major DJ</span>
+                <span>Tecnología</span>
+                <span>Aftermovie</span>
+            </article>
         </section>
+        <aside>
+            <article>
+                <img src="./assets/img/festivales/spotify.png" alt="Spotify">
+                <h3>Escúchalo en Spotify</h3>
+                <p>Playlist «SoundWave Hits»</p>
+                <input type="button" value="Abrir App">
+            </article>
+            <article>
+                <img src="./assets/img/festivales/radio.png" alt="Radio Indie BCN">
+                <h3>Radio Indie BCN</h3>
+                <p>Emisión en directo · 24/7</p>
+                <input type="button" value="Escuchar">
+            </article>
+        </aside>
         <section>
             <header>
                 <h2>Lo más escuchado · Top 10</h2>
