--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section>
             <article>
                 <h1>Festival&nbsp;<span>Primavera Sound</span>&nbsp;· 3-7 Junio · Parc del Fòrum</h1>
-                <p>4 dias, 6 escenarios y mas de 120 artistas en el corazon de Barcelona.</p>
+                <p>4 dias, 6 escenarios y mas de 120 artists en el corazon de Barcelona.</p>
                 <p>Vive un show inmersivo con sonido 360º</p>
                 <a href="/tickets.html">Entradas</a>
                 <a href="/explore.html">Descubrir Musica</a>
@@ -37,72 +37,72 @@
                 <p>Electrónica · Indie · Pop</p>
                 <p>+18</p>
             </article>
-            <img src="./assets/img/portada/portada.png" alt="Festival SoundTecITB">
+            <img src="./assets/img/homepage/homepage.png" alt="Festival SoundTecITB">
         </section>
         <section>
             <header>
                 <h2>Lanzamientos</h2>
-                <input type="button" value="Ver todo">
+                <a href="/explore.html">Ver todo</a>
             </header>
             <article>
-                <img src="./assets/img/lanzamientos/neon_skies.png" alt="Portada de Neon Skies">
+                <img src="./assets/img/launches/neon_skies.png" alt="Portada de Neon Skies">
                 <h3>Neon Skies</h3>
                 <p>Atlas · Synthpop</p>
-                <input type="button" value="Más info">
+                <a href="/info.html">Más info</a>
             </article>
             <article>
-                <img src="./assets/img/lanzamientos/hologram.png" alt="Portada de Hologram">
+                <img src="./assets/img/launches/hologram.png" alt="Portada de Hologram">
                 <h3>Hologram</h3>
                 <p>Kaia Nova · Electropop</p>
-                <input type="button" value="Más info">
+                <a href="/info.html">Más info</a>
             </article>
             <article>
-                <img src="./assets/img/lanzamientos/mar_de_sonidos.png" alt="Portada de Mar de Sonidos">
+                <img src="./assets/img/launches/mar_de_sonidos.png" alt="Portada de Mar de Sonidos">
                 <h3>Mar de Sonidos</h3>
                 <p>Marea Azul · Dream pop</p>
-                <input type="button" value="Más info">
+                <a href="/info.html">Más info</a>
             </article>
             <article>
-                <img src="./assets/img/lanzamientos/altitude.png" alt="Portada de Altitude">
+                <img src="./assets/img/launches/altitude.png" alt="Portada de Altitude">
                 <h3>Altitude</h3>
                 <p>Vértigo · Electronica</p>
-                <input type="button" value="Más info">
+                <a href="/info.html">Más info</a>
             </article>
             <article>
-                <img src="./assets/img/lanzamientos/midnight_city.png" alt="Portada de Midnight City">
+                <img src="./assets/img/launches/midnight_city.png" alt="Portada de Midnight City">
                 <h3>Midnight City</h3>
                 <p>Neon Parade · SynthTecITB</p>
-                <input type="button" value="Más info">
+                <a href="/info.html">Más info</a>
             </article>
             <article>
-                <img src="./assets/img/lanzamientos/echoes.png" alt="Portada de Echoes">
+                <img src="./assets/img/launches/echoes.png" alt="Portada de Echoes">
                 <h3>Echoes</h3>
                 <p>Arpeggio · Ambient</p>
-                <input type="button" value="Más info">
+                <a href="/info.html">Más info</a>
             </article>
             <article>
-                <img src="./assets/img/lanzamientos/stardust.png" alt="Portada de Stardust">
+                <img src="./assets/img/launches/stardust.png" alt="Portada de Stardust">
                 <h3>Stardust</h3>
                 <p>Halo · Alt Pop</p>
-                <input type="button" value="Más info">
+                <a href="/info.html">Más info</a>
             </article>
             <article>
-                <img src="./assets/img/lanzamientos/paper_tecitbs.png" alt="Portada de Paper TecITBs">
+                <img src="./assets/img/launches/paper_tecitbs.png" alt="Portada de Paper TecITBs">
                 <h3>Paper TecITBs</h3>
                 <p>Lykke · Indie</p>
-                <input type="button" value="Más info">
+                <a href="/info.html">Más info</a>
             </article>
             <article>
-                <img src="./assets/img/lanzamientos/solaris.png" alt="Portada de Solaris">
+                <img src="./assets/img/launches/solaris.png" alt="Portada de Solaris">
                 <h3>Solaris</h3>
                 <p>Dorian · Alt Rock</p>
-                <input type="button" value="Más info">
+                <a href="/info.html">Más info</a>
             </article>
             <article>
-                <img src="./assets/img/lanzamientos/oblivion.png" alt="Portada de Oblivion">
+                <img src="./assets/img/launches/oblivion.png" alt="Portada de Oblivion">
                 <h3>Oblivion</h3>
                 <p>M83 · Synth</p>
-                <input type="button" value="Más info">
+                <a href="/info.html">Más info</a>
             </article>
         </section>
         <section>
@@ -111,49 +111,49 @@
                 <a href="/ranking.html">Var Ranking</a>
             </header>
             <article>
-                <img src="./assets/img/artistas/kala_nova.png" alt="Artista Kala Nova">
+                <img src="./assets/img/artists/kala_nova.png" alt="Artista Kala Nova">
                 <h3>Kala Nova</h3>
                 <p>Electropop</p>
                 <span>★★★★☆</span>
             </article>
             <article>
-                <img src="./assets/img/artistas/atlas.png" alt="Artista Atlas">
+                <img src="./assets/img/artists/atlas.png" alt="Artista Atlas">
                 <h3>Atlas</h3>
                 <p>Synthpop</p>
                 <span>★★★★☆</span>
             </article>
             <article>
-                <img src="./assets/img/artistas/vértigo.png" alt="Artista Vértigo">
+                <img src="./assets/img/artists/vértigo.png" alt="Artista Vértigo">
                 <h3>Vértigo</h3>
                 <p>Electrónica</p>
                 <span>★★★★★</span>
             </article>
             <article>
-                <img src="./assets/img/artistas/lykke.png" alt="Artista Lykke">
+                <img src="./assets/img/artists/lykke.png" alt="Artista Lykke">
                 <h3>Lykke</h3>
                 <p>Indie</p>
                 <span>★★★★☆</span>
             </article>
             <article>
-                <img src="./assets/img/artistas/neon_parade.png" alt="Artista Neon Parade">
+                <img src="./assets/img/artists/neon_parade.png" alt="Artista Neon Parade">
                 <h3>Neon Parade</h3>
                 <p>SynthTecITB</p>
                 <span>★★★★☆</span>
             </article>
             <article>
-                <img src="./assets/img/artistas/halo.png" alt="Artista Halo">
+                <img src="./assets/img/artists/halo.png" alt="Artista Halo">
                 <h3>Halo</h3>
                 <p>Alt Pop</p>
                 <span>★★★★☆</span>
             </article>
             <article>
-                <img src="./assets/img/artistas/marea_azul.png" alt="Artista Marea Azul">
+                <img src="./assets/img/artists/marea_azul.png" alt="Artista Marea Azul">
                 <h3>Marea Azul</h3>
                 <p>Dream pop</p>
                 <span>★★★★☆</span>
             </article>
             <article>
-                <img src="./assets/img/artistas/arpeggio.png" alt="Artista Arpeggio">
+                <img src="./assets/img/artists/arpeggio.png" alt="Artista Arpeggio">
                 <h3>Arpeggio</h3>
                 <p>Ambient</p>
                 <span>★★★★☆</span>
@@ -165,7 +165,7 @@
                 <p>Barcelona</p>
             </header>
             <article>
-                <img src="./assets/img/festivales/primavera_sound.png" alt="Festival de Primavera Sound">
+                <img src="./assets/img/festivals/primavera_sound.png" alt="Festival de Primavera Sound">
                 <h3>Primavera Sound</h3>
                 <p>Barcelona · Finales de mayo/primera semana de junio · Headlines: varios</p>
                 <span>Indle</span>
@@ -173,7 +173,7 @@
                 <span>Pop</span>
             </article>
             <article>
-                <img src="./assets/img/festivales/aurora_fest.png" alt="Festival de Aurora Fest">
+                <img src="./assets/img/festivals/aurora_fest.png" alt="Festival de Aurora Fest">
                 <h3>Aurora Fest</h3>
                 <p>Montjuïc · 12-14 Jul · Headlines: Atlas, Kaia Nova</p>
                 <span>Escenografía</span>
@@ -181,7 +181,7 @@
                 <span>Experiencial</span>
             </article>
             <article>
-                <img src="./assets/img/festivales/altitude.png" alt="Festival de Altitude">
+                <img src="./assets/img/festivals/altitude.png" alt="Festival de Altitude">
                 <h3>Altitude</h3>
                 <p>Andorra · 20-22 Feb · Headlines: M83, Halo</p>
                 <span>Major DJ</span>
@@ -191,22 +191,22 @@
         </section>
         <aside>
             <article>
-                <img src="./assets/img/festivales/spotify.png" alt="Spotify">
+                <img src="./assets/img/festivals/spotify.png" alt="Spotify">
                 <h3>Escúchalo en Spotify</h3>
                 <p>Playlist «SoundWave Hits»</p>
-                <input type="button" value="Abrir App">
+                <a href="https://open.spotify.com/">Abrir App</a>
             </article>
             <article>
-                <img src="./assets/img/festivales/radio.png" alt="Radio Indie BCN">
+                <img src="./assets/img/festivals/radio.png" alt="Radio Indie BCN">
                 <h3>Radio Indie BCN</h3>
                 <p>Emisión en directo · 24/7</p>
-                <input type="button" value="Escuchar">
+                <a href="/radio.html">Escuchar</a>
             </article>
         </aside>
         <section>
             <header>
                 <h2>Lo más escuchado · Top 10</h2>
-                <input type="button" value="Playlist">
+                <a href="https://open.spotify.com/playlist/">Playlist</a>
             </header>
             <ol>
                 <li><p>Kaia Nova -&nbsp;<span>Hologram</span></p></li>
