Add: footer style

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <h3><a href="/index.html" title="Home">Sound<span>TecITB</span></a></h3>
+        <h1><a href="/index.html" title="Home">Sound<span>TecITB</span></a></h1>
         <nav>
             <ul>
                 <li><a href="/index.html">Home</a></li>
@@ -26,13 +26,13 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="homepage">
             <article>
-                <h1>Festival&nbsp;<span>Primavera Sound</span>&nbsp;· 3-7 Junio · Parc del Fòrum</h1>
+                <h2>Festival&nbsp;<span>Primavera Sound</span>&nbsp;· 3-7 Junio · Parc del Fòrum</h2>
                 <p>4 dias, 6 escenarios y mas de 120 artists en el corazon de Barcelona.</p>
                 <p>Vive un show inmersivo con sonido 360º</p>
-                <a href="/tickets.html">Entradas</a>
-                <a href="/explore.html">Descubrir Musica</a>
+                <a href="/tickets.html" class="primary">Entradas</a>
+                <a href="/explore.html" class="secundary">Descubrir Musica</a>
                 <p>BCN</p>
                 <p>Electrónica · Indie · Pop</p>
                 <p>+18</p>
@@ -223,14 +223,16 @@
         </section>
     </main>
     <footer>
-        <h3>SoundTecITB</h3>
-        <p>&copy;&nbsp;2025 SoundTecITB ·&nbsp;<address>C/ Aiguablava, 123</address>&nbsp;·&nbsp;<address>Barcelona</address></p>
+        <div>
+            <h1><a href="/index.html" title="Home">Sound<span>TecITB</span></a></h1>
+            <p>&copy;&nbsp;2025 SoundTecITB ·&nbsp;<address>C/ Aiguablava, 123</address>&nbsp;·&nbsp;<address>Barcelona</address></p>
+        </div>
         <nav>
-            <ol>
+            <ul>
                 <li><a href="https://instagram.com/">Instagram</a></li>
                 <li><a href="https://tiktok.com/">TikTok</a></li>
                 <li><a href="https://x.com/">X</a></li>
-            </ol>
+            </ul>
         </nav>
     </footer>
 </body>
