Add: some basic style, poster img

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Home - SoundTecITB</title>
     <link rel="stylesheet" href="./src/css/style.css">
     <link rel="shortcut icon" href="./assets/favicon/favicon.ico" />
     <link rel="icon" type="image/svg+xml" href="./assets/favicon/favicon.svg" />
@@ -39,12 +39,13 @@
             </article>
             <img src="./assets/img/homepage/homepage.png" alt="Festival SoundTecITB">
         </section>
-        <section>
+        <section class="launches">
             <header>
                 <h2>Lanzamientos</h2>
                 <a href="/explore.html">Ver todo</a>
             </header>
-            <article>
+            <div>
+                <article>
                 <img src="./assets/img/launches/neon_skies.png" alt="Portada de Neon Skies">
                 <h3>Neon Skies</h3>
                 <p>Atlas · Synthpop</p>
@@ -104,8 +105,9 @@
                 <p>M83 · Synth</p>
                 <a href="/info.html">Más info</a>
             </article>
+            </div>
         </section>
-        <section>
+        <section class="artist">
             <header>
                 <h2>Artistas destacados</h2>
                 <a href="/ranking.html">Var Ranking</a>
@@ -159,7 +161,7 @@
                 <span>★★★★☆</span>
             </article>
         </section>
-        <section>
+        <section class="festivals">
             <header>
                 <h2>Festivales</h2>
                 <p>Barcelona</p>
@@ -189,7 +191,7 @@
                 <span>Aftermovie</span>
             </article>
         </section>
-        <aside>
+        <aside class="aside">
             <article>
                 <img src="./assets/img/festivals/spotify.png" alt="Spotify">
                 <h3>Escúchalo en Spotify</h3>
@@ -203,7 +205,7 @@
                 <a href="/radio.html">Escuchar</a>
             </article>
         </aside>
-        <section>
+        <section class="top10">
             <header>
                 <h2>Lo más escuchado · Top 10</h2>
                 <a href="https://open.spotify.com/playlist/">Playlist</a>
@@ -222,7 +224,7 @@
             </ol>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
         <div>
             <h1><a href="/index.html" title="Home">Sound<span>TecITB</span></a></h1>
             <p>&copy;&nbsp;2025 SoundTecITB ·&nbsp;<address>C/ Aiguablava, 123</address>&nbsp;·&nbsp;<address>Barcelona</address></p>
