Update: Finalize button border gradient; Add: style for 1st section's tag

--- a/index.html
+++ b/index.html
@@ -31,11 +31,15 @@
                 <h2>Festival&nbsp;<span>Primavera Sound</span>&nbsp;· 3-7 Junio · Parc del Fòrum</h2>
                 <p>4 dias, 6 escenarios y mas de 120 artists en el corazon de Barcelona.</p>
                 <p>Vive un show inmersivo con sonido 360º</p>
-                <a href="/tickets.html" class="primary">Entradas</a>
-                <a href="/explore.html" class="secundary">Descubrir Musica</a>
-                <p>BCN</p>
-                <p>Electrónica · Indie · Pop</p>
-                <p>+18</p>
+                <div>
+                    <a href="/tickets.html" class="primary">Entradas</a>
+                    <a href="/explore.html" class="secundary">Descubrir Musica</a>
+                </div>
+                <div class="tags">
+                    <p>BCN</p>
+                    <p>Electrónica · Indie · Pop</p>
+                    <p>+18</p>
+                </div>
             </article>
             <img src="./assets/img/homepage/homepage.png" alt="Festival SoundTecITB">
         </section>
