--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 </head>
 <body>
     <header>
-        <h1><a href="/index.html" title="Home">Sound<span>TecITB</span></a></h1>
+        <h1><a href="./index.html" title="Home">Sound<span>TecITB</span></a></h1>
         <nav>
             <ul>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/artist.html">Artistas</a></li>
-                <li><a href="/events.html">Eventos</a></li>
-                <li><a href="/contact.html">Contacto</a></li>
-                <li><a href="/register.html">Alta</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./artist.html">Artistas</a></li>
+                <li><a href="./events.html">Eventos</a></li>
+                <li><a href="./contact.html">Contacto</a></li>
+                <li><a href="./register.html">Alta</a></li>
             </ul>
         </nav>
     </header>
@@ -32,8 +32,8 @@
                 <p>4 dias, 6 escenarios y mas de 120 artists en el corazon de Barcelona.</p>
                 <p>Vive un show inmersivo con sonido 360º</p>
                 <div>
-                    <a href="/tickets.html" class="primary">Entradas</a>
-                    <a href="/explore.html" class="secundary">Descubrir Musica</a>
+                    <a href="./tickets.html" class="primary">Entradas</a>
+                    <a href="./explore.html" class="secundary">Descubrir Musica</a>
                 </div>
                 <div class="tags">
                     <p>BCN</p>
@@ -46,75 +46,75 @@
         <section class="launches">
             <header>
                 <h2>Lanzamientos</h2>
-                <a href="/explore.html">Ver todo</a>
+                <a href="./explore.html">Ver todo</a>
             </header>
             <div>
                 <article>
                 <img src="./assets/img/launches/neon_skies.png" alt="Portada de Neon Skies">
                 <h3>Neon Skies</h3>
                 <p>Atlas · Synthpop</p>
-                <a href="/info.html">Más info</a>
+                <a href="./info.html">Más info</a>
             </article>
             <article>
                 <img src="./assets/img/launches/hologram.png" alt="Portada de Hologram">
                 <h3>Hologram</h3>
                 <p>Kaia Nova · Electropop</p>
-                <a href="/info.html">Más info</a>
+                <a href="./info.html">Más info</a>
             </article>
             <article>
                 <img src="./assets/img/launches/mar_de_sonidos.png" alt="Portada de Mar de Sonidos">
                 <h3>Mar de Sonidos</h3>
                 <p>Marea Azul · Dream pop</p>
-                <a href="/info.html">Más info</a>
+                <a href="./info.html">Más info</a>
             </article>
             <article>
                 <img src="./assets/img/launches/altitude.png" alt="Portada de Altitude">
                 <h3>Altitude</h3>
                 <p>Vértigo · Electronica</p>
-                <a href="/info.html">Más info</a>
+                <a href="./info.html">Más info</a>
             </article>
             <article>
                 <img src="./assets/img/launches/midnight_city.png" alt="Portada de Midnight City">
                 <h3>Midnight City</h3>
                 <p>Neon Parade · SynthTecITB</p>
-                <a href="/info.html">Más info</a>
+                <a href="./info.html">Más info</a>
             </article>
             <article>
                 <img src="./assets/img/launches/echoes.png" alt="Portada de Echoes">
                 <h3>Echoes</h3>
                 <p>Arpeggio · Ambient</p>
-                <a href="/info.html">Más info</a>
+                <a href="./info.html">Más info</a>
             </article>
             <article>
                 <img src="./assets/img/launches/stardust.png" alt="Portada de Stardust">
                 <h3>Stardust</h3>
                 <p>Halo · Alt Pop</p>
-                <a href="/info.html">Más info</a>
+                <a href="./info.html">Más info</a>
             </article>
             <article>
                 <img src="./assets/img/launches/paper_tecitbs.png" alt="Portada de Paper TecITBs">
                 <h3>Paper TecITBs</h3>
                 <p>Lykke · Indie</p>
-                <a href="/info.html">Más info</a>
+                <a href="./info.html">Más info</a>
             </article>
             <article>
                 <img src="./assets/img/launches/solaris.png" alt="Portada de Solaris">
                 <h3>Solaris</h3>
                 <p>Dorian · Alt Rock</p>
-                <a href="/info.html">Más info</a>
+                <a href="./info.html">Más info</a>
             </article>
             <article>
                 <img src="./assets/img/launches/oblivion.png" alt="Portada de Oblivion">
                 <h3>Oblivion</h3>
                 <p>M83 · Synth</p>
-                <a href="/info.html">Más info</a>
+                <a href="./info.html">Más info</a>
             </article>
             </div>
         </section>
         <section class="artist">
             <header>
                 <h2>Artistas destacados</h2>
-                <a href="/ranking.html">Var Ranking</a>
+                <a href="./ranking.html">Var Ranking</a>
             </header>
             <article>
                 <img src="./assets/img/artists/kala_nova.png" alt="Artista Kala Nova">
@@ -206,7 +206,7 @@
                 <img src="./assets/img/festivals/radio.png" alt="Radio Indie BCN">
                 <h3>Radio Indie BCN</h3>
                 <p>Emisión en directo · 24/7</p>
-                <a href="/radio.html">Escuchar</a>
+                <a href="./radio.html">Escuchar</a>
             </article>
         </aside>
         <section class="top10">
@@ -230,7 +230,7 @@
     </main>
     <footer class="footer">
         <div>
-            <h1><a href="/index.html" title="Home">Sound<span>TecITB</span></a></h1>
+            <h1><a href="./index.html" title="Home">Sound<span>TecITB</span></a></h1>
             <p>&copy;&nbsp;2025 SoundTecITB ·&nbsp;<address>C/ Aiguablava, 123</address>&nbsp;·&nbsp;<address>Barcelona</address></p>
         </div>
         <nav>
