Add: styles for launches

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                 <p>4 dias, 6 escenarios y mas de 120 artists en el corazon de Barcelona.</p>
                 <p>Vive un show inmersivo con sonido 360º</p>
                 <div>
-                    <a href="./tickets.html" class="primary">Entradas</a>
-                    <a href="./explore.html" class="secundary">Descubrir Musica</a>
+                    <a href="./tickets.html" class="mainBtn primary">Entradas</a>
+                    <a href="./explore.html" class="mainBtn secondary">Descubrir Musica</a>
                 </div>
-                <div class="tags">
+                <div class="homeTags">
                     <p>BCN</p>
                     <p>Electrónica · Indie · Pop</p>
                     <p>+18</p>
@@ -44,71 +44,93 @@
             <img src="./assets/img/homepage/homepage.png" alt="Festival SoundTecITB">
         </section>
         <section class="launches">
-            <header>
-                <h2>Lanzamientos</h2>
-                <a href="./explore.html">Ver todo</a>
-            </header>
             <div>
-                <article>
-                <img src="./assets/img/launches/neon_skies.png" alt="Portada de Neon Skies">
-                <h3>Neon Skies</h3>
-                <p>Atlas · Synthpop</p>
-                <a href="./info.html">Más info</a>
-            </article>
-            <article>
-                <img src="./assets/img/launches/hologram.png" alt="Portada de Hologram">
-                <h3>Hologram</h3>
-                <p>Kaia Nova · Electropop</p>
-                <a href="./info.html">Más info</a>
-            </article>
-            <article>
-                <img src="./assets/img/launches/mar_de_sonidos.png" alt="Portada de Mar de Sonidos">
-                <h3>Mar de Sonidos</h3>
-                <p>Marea Azul · Dream pop</p>
-                <a href="./info.html">Más info</a>
-            </article>
-            <article>
-                <img src="./assets/img/launches/altitude.png" alt="Portada de Altitude">
-                <h3>Altitude</h3>
-                <p>Vértigo · Electronica</p>
-                <a href="./info.html">Más info</a>
-            </article>
-            <article>
-                <img src="./assets/img/launches/midnight_city.png" alt="Portada de Midnight City">
-                <h3>Midnight City</h3>
-                <p>Neon Parade · SynthTecITB</p>
-                <a href="./info.html">Más info</a>
-            </article>
-            <article>
-                <img src="./assets/img/launches/echoes.png" alt="Portada de Echoes">
-                <h3>Echoes</h3>
-                <p>Arpeggio · Ambient</p>
-                <a href="./info.html">Más info</a>
-            </article>
-            <article>
-                <img src="./assets/img/launches/stardust.png" alt="Portada de Stardust">
-                <h3>Stardust</h3>
-                <p>Halo · Alt Pop</p>
-                <a href="./info.html">Más info</a>
-            </article>
-            <article>
-                <img src="./assets/img/launches/paper_tecitbs.png" alt="Portada de Paper TecITBs">
-                <h3>Paper TecITBs</h3>
-                <p>Lykke · Indie</p>
-                <a href="./info.html">Más info</a>
-            </article>
-            <article>
-                <img src="./assets/img/launches/solaris.png" alt="Portada de Solaris">
-                <h3>Solaris</h3>
-                <p>Dorian · Alt Rock</p>
-                <a href="./info.html">Más info</a>
-            </article>
-            <article>
-                <img src="./assets/img/launches/oblivion.png" alt="Portada de Oblivion">
-                <h3>Oblivion</h3>
-                <p>M83 · Synth</p>
-                <a href="./info.html">Más info</a>
-            </article>
+                <header>
+                    <h2>Lanzamientos</h2>
+                    <a href="./explore.html">Ver todo</a>
+                </header>
+                <div>
+                    <article>
+                        <img src="./assets/img/launches/launches.png" alt="Portada de Neon Skies">
+                        <div>
+                            <h3>Neon Skies</h3>
+                            <p>Atlas · Synthpop</p>
+                            <a href="./info.html">Más info</a>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="./assets/img/launches/launches.png" alt="Portada de Hologram">
+                        <div>
+                            <h3>Hologram</h3>
+                            <p>Kaia Nova · Electropop</p>
+                            <a href="./info.html">Más info</a>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="./assets/img/launches/launches.png" alt="Portada de Mar de Sonidos">
+                        <div>
+                            <h3>Mar de Sonidos</h3>
+                            <p>Marea Azul · Dream pop</p>
+                            <a href="./info.html">Más info</a>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="./assets/img/launches/launches.png" alt="Portada de Altitude">
+                        <div>
+                            <h3>Altitude</h3>
+                            <p>Vértigo · Electronica</p>
+                            <a href="./info.html">Más info</a>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="./assets/img/launches/launches.png" alt="Portada de Midnight City">
+                        <div>
+                            <h3>Midnight City</h3>
+                            <p>Neon Parade · SynthTecITB</p>
+                            <a href="./info.html">Más info</a>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="./assets/img/launches/launches.png" alt="Portada de Echoes">
+                        <div>
+                            <h3>Echoes</h3>
+                            <p>Arpeggio · Ambient</p>
+                            <a href="./info.html">Más info</a>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="./assets/img/launches/launches.png" alt="Portada de Stardust">
+                        <div>
+                            <h3>Stardust</h3>
+                            <p>Halo · Alt Pop</p>
+                            <a href="./info.html">Más info</a>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="./assets/img/launches/launches.png" alt="Portada de Paper TecITBs">
+                        <div>
+                            <h3>Paper TecITBs</h3>
+                            <p>Lykke · Indie</p>
+                            <a href="./info.html">Más info</a>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="./assets/img/launches/launches.png" alt="Portada de Solaris">
+                        <div>
+                            <h3>Solaris</h3>
+                            <p>Dorian · Alt Rock</p>
+                            <a href="./info.html">Más info</a>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="./assets/img/launches/launches.png" alt="Portada de Oblivion">
+                        <div>
+                            <h3>Oblivion</h3>
+                            <p>M83 · Synth</p>
+                            <a href="./info.html">Más info</a>
+                        </div>
+                    </article>
+                </div>
             </div>
         </section>
         <section class="artist">
