Updates: Split style.css into style.css and index.css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - SoundTecITB</title>
     <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/index.css">
     <link rel="shortcut icon" href="./assets/favicon/favicon.ico" />
     <link rel="icon" type="image/svg+xml" href="./assets/favicon/favicon.svg" />
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png" />
@@ -134,58 +135,62 @@
             </div>
         </section>
         <section class="artist">
-            <header>
-                <h2>Artistas destacados</h2>
-                <a href="./ranking.html">Var Ranking</a>
-            </header>
-            <article>
-                <img src="./assets/img/artists/kala_nova.png" alt="Artista Kala Nova">
-                <h3>Kala Nova</h3>
-                <p>Electropop</p>
-                <span>★★★★☆</span>
-            </article>
-            <article>
-                <img src="./assets/img/artists/atlas.png" alt="Artista Atlas">
-                <h3>Atlas</h3>
-                <p>Synthpop</p>
-                <span>★★★★☆</span>
-            </article>
-            <article>
-                <img src="./assets/img/artists/vértigo.png" alt="Artista Vértigo">
-                <h3>Vértigo</h3>
-                <p>Electrónica</p>
-                <span>★★★★★</span>
-            </article>
-            <article>
-                <img src="./assets/img/artists/lykke.png" alt="Artista Lykke">
-                <h3>Lykke</h3>
-                <p>Indie</p>
-                <span>★★★★☆</span>
-            </article>
-            <article>
-                <img src="./assets/img/artists/neon_parade.png" alt="Artista Neon Parade">
-                <h3>Neon Parade</h3>
-                <p>SynthTecITB</p>
-                <span>★★★★☆</span>
-            </article>
-            <article>
-                <img src="./assets/img/artists/halo.png" alt="Artista Halo">
-                <h3>Halo</h3>
-                <p>Alt Pop</p>
-                <span>★★★★☆</span>
-            </article>
-            <article>
-                <img src="./assets/img/artists/marea_azul.png" alt="Artista Marea Azul">
-                <h3>Marea Azul</h3>
-                <p>Dream pop</p>
-                <span>★★★★☆</span>
-            </article>
-            <article>
-                <img src="./assets/img/artists/arpeggio.png" alt="Artista Arpeggio">
-                <h3>Arpeggio</h3>
-                <p>Ambient</p>
-                <span>★★★★☆</span>
-            </article>
+            <div>
+                <header>
+                    <h2>Artistas destacados</h2>
+                    <a href="./ranking.html">Var Ranking</a>
+                </header>
+                <div>
+                    <article>
+                        <img src="./assets/img/artists/kala_nova.png" alt="Artista Kala Nova">
+                        <h3>Kala Nova</h3>
+                        <p>Electropop</p>
+                        <span>★★★★☆</span>
+                    </article>
+                    <article>
+                        <img src="./assets/img/artists/atlas.png" alt="Artista Atlas">
+                        <h3>Atlas</h3>
+                        <p>Synthpop</p>
+                        <span>★★★★☆</span>
+                    </article>
+                    <article>
+                        <img src="./assets/img/artists/vértigo.png" alt="Artista Vértigo">
+                        <h3>Vértigo</h3>
+                        <p>Electrónica</p>
+                        <span>★★★★★</span>
+                    </article>
+                    <article>
+                        <img src="./assets/img/artists/lykke.png" alt="Artista Lykke">
+                        <h3>Lykke</h3>
+                        <p>Indie</p>
+                        <span>★★★★☆</span>
+                    </article>
+                    <article>
+                        <img src="./assets/img/artists/neon_parade.png" alt="Artista Neon Parade">
+                        <h3>Neon Parade</h3>
+                        <p>SynthTecITB</p>
+                        <span>★★★★☆</span>
+                    </article>
+                    <article>
+                        <img src="./assets/img/artists/halo.png" alt="Artista Halo">
+                        <h3>Halo</h3>
+                        <p>Alt Pop</p>
+                        <span>★★★★☆</span>
+                    </article>
+                    <article>
+                        <img src="./assets/img/artists/marea_azul.png" alt="Artista Marea Azul">
+                        <h3>Marea Azul</h3>
+                        <p>Dream pop</p>
+                        <span>★★★★☆</span>
+                    </article>
+                    <article>
+                        <img src="./assets/img/artists/arpeggio.png" alt="Artista Arpeggio">
+                        <h3>Arpeggio</h3>
+                        <p>Ambient</p>
+                        <span>★★★★☆</span>
+                    </article>
+                </div>
+            </div>
         </section>
         <section class="festivals">
             <header>
