--- a/index.html
+++ b/index.html
@@ -142,52 +142,60 @@
                 </header>
                 <div>
                     <article>
-                        <img src="./assets/img/artists/kala_nova.png" alt="Artista Kala Nova">
-                        <h3>Kala Nova</h3>
-                        <p>Electropop</p>
-                        <span>★★★★☆</span>
+                        <img src="./assets/img/artists/artist.png" alt="Artista Kala Nova">
+                        <div>
+                            <h3>Kala Nova</h3>
+                            <p>Electropop · <span>★★★★☆</span></p>
+                        </div>
                     </article>
                     <article>
-                        <img src="./assets/img/artists/atlas.png" alt="Artista Atlas">
-                        <h3>Atlas</h3>
-                        <p>Synthpop</p>
-                        <span>★★★★☆</span>
+                        <img src="./assets/img/artists/artist.png" alt="Artista Atlas">
+                        <div>
+                            <h3>Atlas</h3>
+                            <p>Synthpop · <span>★★★★☆</span></p>
+                        </div>
                     </article>
                     <article>
-                        <img src="./assets/img/artists/vértigo.png" alt="Artista Vértigo">
-                        <h3>Vértigo</h3>
-                        <p>Electrónica</p>
-                        <span>★★★★★</span>
+                        <img src="./assets/img/artists/artist.png" alt="Artista Vértigo">
+                        <div>
+                            <h3>Vértigo</h3>
+                            <p>Electrónica · <span>★★★★★</span></p>
+                        </div>
                     </article>
                     <article>
-                        <img src="./assets/img/artists/lykke.png" alt="Artista Lykke">
-                        <h3>Lykke</h3>
-                        <p>Indie</p>
-                        <span>★★★★☆</span>
+                        <img src="./assets/img/artists/artist.png" alt="Artista Lykke">
+                        <div>
+                            <h3>Lykke</h3>
+                            <p>Indie · <span>★★★★☆</span></p>
+                        </div>
                     </article>
                     <article>
-                        <img src="./assets/img/artists/neon_parade.png" alt="Artista Neon Parade">
-                        <h3>Neon Parade</h3>
-                        <p>SynthTecITB</p>
-                        <span>★★★★☆</span>
+                        <img src="./assets/img/artists/artist.png" alt="Artista Neon Parade">
+                        <div>
+                            <h3>Neon Parade</h3>
+                            <p>SynthTecITB · <span>★★★★☆</span></p>
+                        </div>
                     </article>
                     <article>
-                        <img src="./assets/img/artists/halo.png" alt="Artista Halo">
-                        <h3>Halo</h3>
-                        <p>Alt Pop</p>
-                        <span>★★★★☆</span>
+                        <img src="./assets/img/artists/artist.png" alt="Artista Halo">
+                        <div>
+                            <h3>Halo</h3>
+                            <p>Alt Pop · <span>★★★★☆</span></p>
+                        </div>
                     </article>
                     <article>
-                        <img src="./assets/img/artists/marea_azul.png" alt="Artista Marea Azul">
-                        <h3>Marea Azul</h3>
-                        <p>Dream pop</p>
-                        <span>★★★★☆</span>
+                        <img src="./assets/img/artists/artist.png" alt="Artista Marea Azul">
+                        <div>
+                            <h3>Marea Azul</h3>
+                            <p>Dream pop · <span>★★★★☆</span></p>
+                        </div>
                     </article>
                     <article>
-                        <img src="./assets/img/artists/arpeggio.png" alt="Artista Arpeggio">
-                        <h3>Arpeggio</h3>
-                        <p>Ambient</p>
-                        <span>★★★★☆</span>
+                        <img src="./assets/img/artists/artist.png" alt="Artista Arpeggio">
+                        <div>
+                            <h3>Arpeggio</h3>
+                            <p>Ambient · <span>★★★★☆</span></p>
+                        </div>
                     </article>
                 </div>
             </div>
