Add: styles for top 10 listened

--- a/index.html
+++ b/index.html
@@ -262,22 +262,24 @@
         </div>
     </section>
     <section class="top10">
-        <header>
-            <h2>Lo más escuchado · Top 10</h2>
-            <a href="https://open.spotify.com/playlist/">Playlist</a>
-        </header>
-        <ol>
-            <li><p>Kaia Nova -&nbsp;<span>Hologram</span></p></li>
-            <li><p>Atlas -&nbsp;<span>Neon Skies</span></p></li>
-            <li><p>Vértigo -&nbsp;<span>Altitude</span></p></li>
-            <li><p>Marea Azul -&nbsp;<span>Mar de Sonidos</span></p></li>
-            <li><p>Neon Parade -&nbsp;<span>Midnight City</span></p></li>
-            <li><p>Halo -&nbsp;<span>Stardust</span></p></li>
-            <li><p>Lykke -&nbsp;<span>Paper TecITBs</span></p></li>
-            <li><p>Dorian -&nbsp;<span>Solaris</span></p></li>
-            <li><p>M83 -&nbsp;<span>Oblivion</span></p></li>
-            <li><p>Arpeggio -&nbsp;<span>Echoes</span></p></li>
-        </ol>
+        <div>
+            <header>
+                <h2>Lo más escuchado · Top 10</h2>
+                <a href="https://open.spotify.com/playlist/">Playlist</a>
+            </header>
+            <ol>
+                <li><p>Kaia Nova -&nbsp;<span>Hologram</span></p></li>
+                <li><p>Atlas -&nbsp;<span>Neon Skies</span></p></li>
+                <li><p>Vértigo -&nbsp;<span>Altitude</span></p></li>
+                <li><p>Marea Azul -&nbsp;<span>Mar de Sonidos</span></p></li>
+                <li><p>Neon Parade -&nbsp;<span>Midnight City</span></p></li>
+                <li><p>Halo -&nbsp;<span>Stardust</span></p></li>
+                <li><p>Lykke -&nbsp;<span>Paper TecITBs</span></p></li>
+                <li><p>Dorian -&nbsp;<span>Solaris</span></p></li>
+                <li><p>M83 -&nbsp;<span>Oblivion</span></p></li>
+                <li><p>Arpeggio -&nbsp;<span>Echoes</span></p></li>
+            </ol>
+        </div>
     </section>
     <footer class="footer">
         <div>
