Update: change some URLs

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <h1><a href="./index.html" title="Home">Sound<span>TecITB</span></a></h1>
         <nav>
             <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./explore.html#artist">Artistas</a></li>
-                <li><a href="./explore.html#events">Eventos</a></li>
-                <li><a href="./contact.html">Contacto</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#artist">Artistas</a></li>
+                <li><a href="#festivals">Eventos</a></li>
+                <li><a href="./register.html#contact">Contacto</a></li>
                 <li><a href="./register.html">Alta</a></li>
             </ul>
         </nav>
@@ -34,7 +34,7 @@
                 <p>Vive un show inmersivo con sonido 360º</p>
                 <div>
                     <a href="./register.html" class="mainBtn primary">Entradas</a>
-                    <a href="./explore.html" class="mainBtn secondary">Descubrir Musica</a>
+                    <a href="#releases" class="mainBtn secondary">Descubrir Musica</a>
                 </div>
                 <div class="homeTags">
                     <p>BCN</p>
@@ -44,7 +44,7 @@
             </article>
             <img src="./assets/img/homepage/homepage.png" alt="Festival SoundTecITB">
         </section>
-        <section class="releases">
+        <section class="releases" id="releases">
             <div>
                 <header>
                     <h2>Lanzamientos</h2>
@@ -134,7 +134,7 @@
                 </div>
             </div>
         </section>
-        <section class="artist">
+        <section class="artist" id="artist">
             <div>
                 <header>
                     <h2>Artistas destacados</h2>
@@ -201,7 +201,7 @@
             </div>
         </section>
     </main>
-    <section class="festivals">
+    <section class="festivals" id="festivals">
         <div>
             <header>
                 <h2>Festivales</h2>
@@ -254,7 +254,7 @@
                         <div>
                             <h3>Radio Indie BCN</h3>
                             <p>Emisión en directo · 24/7</p>
-                            <a href="./radio.html" class="mainBtn secondary">Escuchar</a>
+                            <a href="https://radio.garden/" class="mainBtn secondary">Escuchar</a>
                         </div>
                     </article>
                 </aside>
