Add: Sign Up page

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#artist">Artistas</a></li>
                 <li><a href="#festivals">Eventos</a></li>
-                <li><a href="./register.html#contact">Contacto</a></li>
-                <li><a href="./register.html">Alta</a></li>
+                <li><a href="./signup.html#contact">Contacto</a></li>
+                <li><a href="./signup.html">Alta</a></li>
             </ul>
         </nav>
     </header>
@@ -33,7 +33,7 @@
                 <p>4 dias, 6 escenarios y mas de 120 artists en el corazon de Barcelona.</p>
                 <p>Vive un show inmersivo con sonido 360º</p>
                 <div>
-                    <a href="./register.html" class="mainBtn primary">Entradas</a>
+                    <a href="./signup.html" class="mainBtn primary">Entradas</a>
                     <a href="#releases" class="mainBtn secondary">Descubrir Musica</a>
                 </div>
                 <div class="homeTags">
